--- a/src/Layout/Header/Header.module.css
+++ b/src/Layout/Header/Header.module.css
@@ -34,3 +34,8 @@
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
 }
+@media (max-width: 820px) {
+  .header_right ul {
+    display: none;
+  }
+}
