--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,8 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #4a607a;
 }
+@media (max-width: 1200px) {
+  .container {
+    padding: 0 1.5rem;
+  }
+}
