--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -1,172 +1,50 @@
+.home {
+  background-color: #fff;
+  padding: 6rem 0 3rem 0;
+  color: #0d1c41;
+}
 .home_head {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin: 3rem 0;
-}
-.home_text {
-  width: 60%;
-  /* border: 1px solid; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.home_text h1 {
-  font-size: 56px;
-}
-.home_text p {
-  margin: 0.5rem 0;
-}
-.home_img {
-  width: 40%;
-  /* border: 1px solid; */
-}
-.home_img img {
-  width: 100%;
-}
-.hh_input {
-  width: 50%;
-  border: 3px solid #aaa;
-  outline: none;
-  padding: 0.5rem;
-  background-color: #eee;
-  border-radius: 8px;
-}
-.down {
-  display: flex;
-  justify-content: center;
-  font-size: 2rem;
-  margin: 1rem 0;
-}
-.about_edu {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   margin-bottom: 3rem;
 }
-.about_edu h1 {
-  width: 100%;
-  text-align: center;
-  margin: 3rem 0;
+.home_head_h1 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 59px;
+  letter-spacing: 0.21em;
 }
-.card_about_edu {
-  width: 235px;
-  height: 325px;
-  margin: 1rem;
-  padding: 1rem;
-  background: #ffffff;
-  box-shadow: 0px 0px 10px rgba(85, 85, 85, 0.25);
-  border-radius: 30px;
-  position: relative;
-  text-align: center;
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
+.home_head_p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 39px;
+  letter-spacing: 0.12em;
+  margin: 1rem 0;
 }
-.card_about_edu:hover {
-  background: #f5f5f5;
-}
-.card_about_edu h5 {
-  width: 70%;
-}
-.card_about_edu_img {
-  width: 65%;
-  height: 200px;
-  display: flex;
-  align-items: center;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-.card_about_edu_img img {
-  width: 100%;
-}
-.choice_edu_title {
-  text-align: center;
-  width: 45%;
-  margin: 0 auto;
-  margin-bottom: 1rem;
-}
-.choice_edu_desc {
-  text-align: center;
-  width: 68%;
-  margin: 0 auto;
-  font-size: 1.2rem;
-}
-.choice_edu_cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 2rem auto;
-}
-.choice_edu_card {
-  position: relative;
-  height: 280px;
-  width: 500px;
-  border-radius: 20px;
-  padding: 1rem;
-  box-shadow: 0 0 10px #aaa;
-  margin: 0.7rem;
-}
-.choice_edu_card span {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.choice_edu_card img {
-  width: 200px;
-}
-@media (max-width: 950px) {
-  .home_head {
-    flex-direction: column;
-  }
-  .home_text {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .home_text h1 {
-    font-size: 48px;
-  }
 
-  .home_img {
-    width: 55%;
-    align-self: flex-end;
+/* MEDIA QUERY */
+
+@media (max-width: 1080px) {
+  .home_head_h1 {
+    font-size: 36px;
+    line-height: 48px;
   }
-  .about_edu h1 {
-    font-size: 28px;
-    margin: 1.5rem 0;
+  .home_head_p {
+    font-size: 24px;
+    line-height: 32px;
   }
 }
 @media (max-width: 600px) {
-  .home_head {
-    flex-direction: column;
+  .home_head_h1 {
+    line-height: 32px;
+    font-size: 24px;
   }
-
-  .home_text h1 {
-    font-size: 36px;
-  }
-  .home_text p {
-    font-size: 16px;
-  }
-  .home_text input {
+  .home_head_p {
+    line-height: 24px;
     font-size: 12px;
-    width: 80%;
-  }
-
-  .home_img {
-    width: 100%;
-    margin-top: 2rem;
-  }
-  .card_about_edu {
-    width: 100%;
-    height: 500px;
-    margin: 0.75rem 0;
-  }
-  .card_about_edu h5 {
-    font-size: 1rem;
+    margin: 0.5rem 0;
   }
 }
