--- a/src/Layout/Header/Header.module.css
+++ b/src/Layout/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   width: 100vw;
   height: 80px;
-  box-shadow: 10px 0 15px #aaa;
+  box-shadow: 0 0 5px #aaa;
   position: fixed;
   top: 0;
   left: 0;
