--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -10,21 +10,38 @@
   margin-bottom: 3rem;
 }
 .home_head_h1 {
-  font-style: normal;
   font-weight: 600;
   font-size: 48px;
   line-height: 59px;
   letter-spacing: 0.21em;
 }
 .home_head_p {
-  font-style: normal;
   font-weight: 400;
   font-size: 32px;
   line-height: 39px;
   letter-spacing: 0.12em;
   margin: 1rem 0;
 }
-
+.title {
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 44px;
+  text-align: center;
+  letter-spacing: 0.12em;
+  margin-bottom: 1rem;
+}
+.title_desc {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 29px;
+  text-align: center;
+}
+.card {
+  height: 275px;
+  background: #ffffff;
+  box-shadow: 0px 0px 10px rgba(85, 85, 85, 0.25);
+  border-radius: 30px;
+}
 /* MEDIA QUERY */
 
 @media (max-width: 1080px) {
@@ -36,8 +53,16 @@
     font-size: 24px;
     line-height: 32px;
   }
+  .title {
+    font-size: 32px;
+    line-height: 48px;
+  }
+  .title_desc {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
-@media (max-width: 600px) {
+@media (max-width: 620px) {
   .home_head_h1 {
     line-height: 32px;
     font-size: 24px;
@@ -46,5 +71,14 @@
     line-height: 24px;
     font-size: 12px;
     margin: 0.5rem 0;
+  }
+  .title {
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 00rem;
+  }
+  .title_desc {
+    font-size: 12px;
+    line-height: 16px;
   }
 }
