--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -1,6 +1,6 @@
 .home {
   background-color: #fff;
-  padding: 6rem 0 3rem 0;
+  padding: 10rem 0 2rem 0;
   color: #0d1c41;
 }
 .home_head {
@@ -28,6 +28,7 @@
   line-height: 44px;
   text-align: center;
   letter-spacing: 0.12em;
+  margin-top: 3rem;
   margin-bottom: 1rem;
 }
 .title_desc {
@@ -37,10 +38,42 @@
   text-align: center;
 }
 .card {
-  height: 275px;
+  height: 300px;
   background: #ffffff;
   box-shadow: 0px 0px 10px rgba(85, 85, 85, 0.25);
   border-radius: 30px;
+  cursor: pointer;
+}
+.card:hover {
+  background-color: #f3f3f3;
+}
+.about_edu_card {
+  display: flex;
+  flex-direction: column-reverse;
+  text-align: center;
+  padding: 1.2rem;
+  position: relative;
+}
+.about_edu_card div {
+  position: absolute;
+  width: 60%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.title_desc {
+  margin-bottom: 3rem;
+}
+.choice_edu_card {
+  padding: 2rem;
+  position: relative;
+}
+.choice_edu_card div {
+  position: absolute;
+  width: 50%;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 /* MEDIA QUERY */
 
@@ -62,6 +95,16 @@
     line-height: 20px;
   }
 }
+@media (max-width: 899px) {
+  .choice_edu_card {
+    height: 450px;
+  }
+}
+@media (max-width: 700px) {
+  .choice_edu_card {
+    height: 350px;
+  }
+}
 @media (max-width: 620px) {
   .home_head_h1 {
     line-height: 32px;
@@ -80,5 +123,11 @@
   .title_desc {
     font-size: 12px;
     line-height: 16px;
+  }
+  .about_edu_card {
+    height: 450px;
+  }
+  .choice_edu_card {
+    height: 300px;
   }
 }
