--- a/src/Layout/Header/Header.module.css
+++ b/src/Layout/Header/Header.module.css
@@ -13,7 +13,11 @@
   height: 100%;
   display: flex;
   align-items: center;
+
   justify-content: space-between;
+}
+.header_container a {
+  color: #333;
 }
 .header_right {
   height: 100%;
