--- a/src/Pages/Course/Course.module.css
+++ b/src/Pages/Course/Course.module.css
@@ -12,10 +12,61 @@
   content: "---";
   opacity: 0;
 }
+
+.course_box {
+  height: 410px;
+  background: #ffffff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 0 4rem;
+  margin: 2rem auto;
+  position: relative;
+  color: #333;
+}
+.course_box:hover {
+  background-color: #f5f5f5;
+}
+.course_box:hover svg {
+  color: #a89060;
+}
+.course_box svg {
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
+  color: #aaa;
+  font-size: 3.5rem;
+}
+.course_box img {
+  height: 258px;
+}
+.course_box_ul {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 1rem;
+}
+.course_box_ul h3 {
+  margin-bottom: 1rem;
+  width: 100%;
+}
+.course_box_ul ul:last-child {
+  margin-left: 1rem;
+}
 @media (max-width: 900px) {
   .course_container p {
     margin-bottom: 2rem;
     padding-right: 0;
+  }
+  .course_box {
+    height: auto;
+    padding: 4rem 2rem;
+  }
+  .course_box img {
+    height: auto;
+    width: 100%;
+    margin-bottom: 1rem;
   }
 }
 @media (max-width: 500px) {
@@ -24,5 +75,8 @@
   }
   .course_container p {
     font-size: 16px;
+  }
+  .course_box svg {
+    font-size: 2rem;
   }
 }
