--- a/src/Pages/Videos/videos.module.css
+++ b/src/Pages/Videos/videos.module.css
@@ -1,10 +1,19 @@
 .videos {
-  margin-top: 80px;
+  margin: 80px auto;
   box-sizing: border-box;
 }
 .shadow {
-  background: #ffffff;
-  box-shadow: 0px 0px 10px #55555540;
+  background: #fafafa;
+  border: 2px solid #eee;
+}
+.modules {
+  display: flex;
+  justify-content: center;
+}
+.modules li button {
+  margin: 2rem !important;
+  color: #a89060;
+  font-weight: bold;
 }
 .btn {
   color: #333;
@@ -15,8 +24,23 @@
   align-items: start !important;
   margin: 0.5rem 0 !important;
   border-radius: 0.25rem !important;
+  border: 2px solid #eee !important;
+  background-color: #fff !important;
+}
+.btn:hover {
+  background-color: #fafafa !important;
 }
 .list_videos {
   border-radius: 0.5rem !important;
   padding: 0.25rem 0.5rem !important;
+}
+.card_videos {
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+.video_player {
+  width: 100%;
+  height: 390px;
+  border: 2px solid #eee;
+  border-radius: 0.5rem;
 }
