--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -40,12 +40,24 @@
 .card {
   height: 300px;
   background: #ffffff;
-  box-shadow: 0px 0px 10px rgba(85, 85, 85, 0.25);
+  border: 2px solid #eee;
+  background-color: #fefefe;
   border-radius: 30px;
   cursor: pointer;
+  position: relative;
+}
+.card svg {
+  position: absolute;
+  right: 1.5rem;
+  top: 1.5rem;
+  font-size: 2.5rem;
+  color: #eee;
+}
+.card:hover svg {
+  color: #a89060;
 }
 .card:hover {
-  background-color: #f3f3f3;
+  background-color: #fafafa;
 }
 .about_edu_card {
   display: flex;
