--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,9 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #4a607a;
 }
-
+.active {
+  display: none;
+}
 @media (max-width: 1200px) {
   .container {
     padding: 0 1.5rem;
