--- a/src/Layout/Header/Header.module.css
+++ b/src/Layout/Header/Header.module.css
@@ -1,12 +1,12 @@
 .header {
   width: 100vw;
   height: 80px;
-  box-shadow: 0 0 5px #aaa;
+  border-bottom: 2px solid #eee;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 11;
-  background-color: #fff;
+  background-color: #f5f5f5;
 }
 .header_container {
   width: 100%;
