--- a/src/Pages/Videos/videos.module.css
+++ b/src/Pages/Videos/videos.module.css
@@ -1,6 +1,7 @@
 .videos {
   margin: 80px auto;
   box-sizing: border-box;
+  color: #333;
 }
 .shadow {
   background: #fafafa;
@@ -11,7 +12,7 @@
   justify-content: center;
 }
 .modules li button {
-  margin: 2rem !important;
+  margin: 0.5rem 2rem !important;
   color: #a89060;
   font-weight: bold;
 }
@@ -43,4 +44,20 @@
   height: 390px;
   border: 2px solid #eee;
   border-radius: 0.5rem;
+}
+@media (max-width: 650px) {
+  .video_player {
+    width: 100%;
+    height: 330px;
+    border: 2px solid #eee;
+    border-radius: 0.5rem;
+  }
+}
+@media (max-width: 550px) {
+  .video_player {
+    width: 100%;
+    height: 250px;
+    border: 2px solid #eee;
+    border-radius: 0.5rem;
+  }
 }
