--- a/src/Pages/Admin/Assignments/assignments.module.css
+++ b/src/Pages/Admin/Assignments/assignments.module.css
@@ -21,3 +21,25 @@
 .form {
   margin-bottom: 1rem;
 }
+.form_input {
+  height: 48px;
+  width: 100%;
+  background: #f5f5f5;
+  border: 2px solid #eeeeee;
+  outline-color: #4a607a;
+  border-radius: 8px;
+  color: #aaa;
+  padding: 0 0.7rem;
+  margin-bottom: 1.2rem;
+}
+.text_area {
+  width: 100%;
+  height: auto;
+  background: #f5f5f5;
+  border: 2px solid #eeeeee;
+  outline-color: #4a607a;
+  border-radius: 8px;
+  color: #aaa;
+  padding: 0.7rem;
+  margin-bottom: 1.2rem;
+}
