--- a/src/Pages/Admin/Students/Students.module.css
+++ b/src/Pages/Admin/Students/Students.module.css
@@ -12,3 +12,17 @@
   padding: 0 0.7rem;
   margin-bottom: 1.2rem;
 }
+.form {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 2rem;
+}
+.form_tr {
+  background-color: #4a607a;
+  color: #fff;
+  height: 2rem;
+}
+.form_td {
+  border-bottom: 2px solid #4a607a;
+  height: 3rem;
+}
